# bsu

./: CMakeLists.txt  Functions.cpp  Functions.h  Killer.cpp  Main.cpp  Matrix.txt  Matrix1.txt  User.cpp  buffered_channel.h  main.cpp
Killer/: Killer.sln
Killer/Killer/: Killer.vcxproj  Killer.vcxproj.filters
Main/: CMakeLists.txt  Main.cpp  main.cpp
Number_lib/: CMakeLists.txt
ProcA/: mainA.cpp
ProcM/: mainM.cpp
ProcP/: mainP.cpp
ProcS/: mainS.cpp
TestClient/: CMakeLists.txt  main.cpp
User/: User.sln
User/User/: User.vcxproj
Vector_lib/: CMakeLists.txt  library.cpp
lab3_lin/: lib_script.sh
lab3_lin/Number_lib/: library.cpp  library.h
lab3_lin/TestClient/: main  main.cpp
lab3_lin/Vector_lib/: library.h
lab3_win/: script.ps1
lab3_win/Number/: Number.cpp  Number.h
lab3_win/TestClient/: TestClient.cpp
lab3_win/Vector/: Vector.cpp  Vector.h
libs/Number/: Number.sln
libs/Number/Debug/: Number.lib  NumberClient.ilk  Vector.exp  Vector.ilk  Vector.lib
libs/Number/Number/: Number.cpp  Number.vcxproj
libs/Number/Number/Debug/: Number.idb  Number.pch  Number.vcxproj.FileListAbsolute.txt
libs/Number/Vector/: Vector.cpp  Vector.h  Vector.vcxproj
libs/Number/Vector/Debug/: Vector.dll.recipe  vc142.idb
libs/TestClient/: TestClient.sln
libs/TestClient/Debug/: TestClient.ilk
libs/TestClient/TestClient/: TestClient.cpp  TestClient.vcxproj  TestClient.vcxproj.filters
procA/: CMakeLists.txt  main.cpp
procM/: CMakeLists.txt  main.cpp
procP/: CMakeLists.txt  main.cpp
procS/: CMakeLists.txt  main.cpp
(+26 files in other folders)
